# Domain-Fingerprinting-Tool

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: main.py
api/middleware/: error_handler.py
api/routes/: scan.py
application/dto/: scan_request.py  scan_response.py
application/services/: analyzer_service.py  collector_service.py  data_prepper.py
application/use_cases/: scan_domain.py
cli/: commands.py
core/domain/entities/: domain_target.py  risk_score.py  scan.py  threat_graph.py
core/ports/: ai_port.py  cache_port.py  collector_port.py  graph_port.py
docs/: AI_LAYER.md  ARCHITECTURE.md  COLLECTORS.md  CONTRIBUTING.md  DEPLOYMENT.md
frontend/: graph.js  index.html  package-lock.json  package.json
frontend/src/: App.vue  graph.js  style.css
frontend/src/components/: AppHeader.vue  GraphView.vue  ProgressPanel.vue  ScanToolbar.vue  StatsRow.vue  TargetBanner.vue
frontend/src/components/SidePanel/: AiAnalysis.vue  AllNodesList.vue  NodeInspector.vue  SidePanel.vue
frontend/src/composables/: useScan.js
infrastructure/ai/: claude_analyzer.py  prompts.py
infrastructure/cache/: redis_cache.py  sqlite_cache.py
infrastructure/external_apis/: crtsh_collector.py  dns_collector.py  hackertarget_collector.py  jarm_c2_list.json  jarm_collector.py  networkx_graph.py  urlscan_collector.py  whois_collector.py
tests/e2e/: test_scan_domain.py
tests/integration/: test_crtsh_collector.py  test_dns_collector.py  test_whois_collector.py
tests/unit/application/: test_analyzer_service.py  test_collector_service.py  test_data_prepper.py  test_networkx_graph.py
tests/unit/core/: test_risk_score.py  test_scan.py  test_threat_graph.py
