[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Domain-Fingerprinting-Tool"
version = "0.1.0"
description = "Domain fingerprinting tool — one signal in, the whole adversarial network out"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",

    # Async HTTP client — replaces requests everywhere
    "httpx==0.27.0",

    # Collectors
    "asyncwhois==0.4.4",          # WHOIS — async native
    "dnspython==2.6.1",           # DNS — use dns.asyncresolver module
    "asyncpg==0.29.0",            # crt.sh — async PostgreSQL driver
    "python-jarm==0.0.6",         # JARM — sync, wrapped with asyncio.to_thread()

    # Graph
    "networkx==3.3",

    # Cache
    "aiosqlite==0.20.0",          # SQLite dev
    "redis[hiredis]==5.0.7",      # Redis prod

    # CLI
    "typer==0.12.3",

    # Config
    "python-dotenv==1.0.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx",                       # for FastAPI TestClient
    "ruff==0.4.9",
    "mypy==1.10.0",
]

[project.scripts]
Domain-Fingerprinting-Tool = "cli.commands:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["core", "application", "infrastructure", "api", "cli"]
